# sx1278

./: .gitignore  CMakeLists.txt  Vagrantfile
examples/: main.c
include/: sx1278.h  sx1278_reg.h  sx127x.h  sx127x_reg.h
lib/: CMakeLists.txt  mpsse_spi.c  rpi_gpio.c  rpi_spi.c  sx12xx_gpio.c  sx12xx_spi.c
lib/include/: gpio.h  rpi_gpio.h  rpi_spi.h  spi.h  sx12xx_gpio.h  sx12xx_spi.h
scripts/: vagrant_provision.sh
src/: hello.c  sx1278.c
tests/: CMakeLists.txt  CMakeLists.txt.in
